2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport/CodeBehindService.cs,
	  MonoDevelop.DesignerSupport/ToolboxService.cs,
	  MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs: Track LoggingService API
	  changes.

2007-11-07  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.PropertyGrid/PropertyGridTree.cs: Use a more
	  convenient color for grup headers.

2007-11-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport/BindingService.cs: Use RootCombine instead of
	  CurrentOpenCombine when possible.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml: Bump MD version.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.mdp: Project file names updated by change in
	  MD path functions.

2007-10-15  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.mdp, Makefile.am: Updated.
	* MonoDevelop.DesignerSupport/TypeNotFoundException.cs,
	  MonoDevelop.DesignerSupport/MemberExistsException.cs,
	  MonoDevelop.DesignerSupport/BindingService.cs,
	  MonoDevelop.DesignerSupport/ErrorInFileException.cs: Better error
	  reporting, including filename/line number.

2007-10-12  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport/BindingService.cs,
	  MonoDevelop.DesignerSupport/MemberExistsException.cs: Improve error
	  output when Codebehind generation fails.

2007-10-12  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport/BindingService.cs: Walk down into base classes
	  when checking if compatible members are present in a class. If members
	  with same name exist, check type compatibility down through the class
	  hierarchy.

2007-10-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.Toolbox/ToolboxItemToolboxLoader.cs:
	  Initialize Gtk before trying to load the toolbox item. Needed since this
	  is done out of process.
