@@ -60,7 +60,8 @@
 	</Extension>
 	
 	<Extension path = "/MonoDevelop/DesignerSupport/PropertyProviders" extension-nodes="Class">
-		<Class class = "MonoDevelop.DesignerSupport.Projects.ProjectsPropertyProvider"/>
+		<Class class = "MonoDevelop.DesignerSupport.Projects.ProjectItemPropertyProvider"/>
+		<Class class = "MonoDevelop.DesignerSupport.Projects.CombineEntryPropertyProvider"/>
 	</Extension>
 	
 <!--	<Extension path = "/MonoDevelop/Ide/DisplayBindings">
