@@ -80,7 +80,7 @@
     <File name="MonoDevelop.DesignerSupport.PropertyGrid.Editors/CharPropertyEditor.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.DesignerSupport/IPropertyProvider.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.DesignerSupport.Projects/ComponentNodeBuilder.cs" subtype="Code" buildaction="Compile" />
-    <File name="MonoDevelop.DesignerSupport.Projects/ProjectsPropertyProvider.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.DesignerSupport.Projects/ProjectItemPropertyProvider.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.DesignerSupport/CustomDescriptor.cs" subtype="Code" buildaction="Compile" />
     <File name="gtk-gui/gui.stetic" subtype="Code" buildaction="EmbedAsResource" />
     <File name="gtk-gui/generated.cs" subtype="Code" buildaction="Compile" />
@@ -96,6 +96,10 @@
     <File name="MonoDevelop.DesignerSupport/OpenDocumentFileProvider.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.DesignerSupport/ErrorInFileException.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.DesignerSupport/TypeNotFoundException.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.DesignerSupport.Projects/ProjectReferenceDescriptor.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.DesignerSupport.Projects/ProjectFileDescriptor.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.DesignerSupport.Projects/CombineEntryPropertyProvider.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.DesignerSupport.Projects/CombineEntryDescriptor.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="False" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
